--- a/SkipBeat.html
+++ b/SkipBeat.html
@@ -42,10 +42,10 @@ Discription page for Skip Beat!
 	
 	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt="" /></a>
 		<ul>
-		<li><a link href="index.html">Home</a></li>
-		<li><a link href="seriesList.html">Novel List</a></li>
-		<li><a link href="mangaList.html">Manga List</a></li>
-		<li><a link href="contact.html">Contact</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="seriesList.html">Novel List</a></li>
+		<li><a href="mangaList.html">Manga List</a></li>
+		<li><a href="contact.html">Contact</a></li>
 		</ul>
 		
 	</nav>
@@ -72,8 +72,8 @@ Discription page for Skip Beat!
 <footer>
 
 	<p>Follow us on Facebook and Instagram!</p>
-<a link href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
-<a link href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
+<a href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
+<a href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
 
 </footer>
 </main>
