--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
 		</figure>
 	</div>
 	
-	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt="" /></a>
+	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt=""/></a>
 		<ul>
-		<li><a link href="index.html">Home</a></li>
-		<li><a link href="seriesList.html">Novel List</a></li>
-		<li><a link href="mangaList.html">Manga List</a></li>
-		<li><a link href="contact.html">Contact</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="seriesList.html">Novel List</a></li>
+		<li><a href="mangaList.html">Manga List</a></li>
+		<li><a href="contact.html">Contact</a></li>
 		</ul>
 		
 	</nav>
@@ -55,58 +55,59 @@
 	<p>Want to help us create great content? You can! Your feedback not only helps us maintain the same quality, but we are
 	also open to recommendations!</p>
 	
-	
 
-<form action="file:///C:/Users/Kaitlyn/Desktop/WeeklyProject/thanks.html" method="post">
+<!--<form action="file:///C:/Users/Kaitlyn/Desktop/WeeklyProject/thanks.html" method="post">-->
 <!--<form action="file:///C:/Users/Kaitelyn%20Low/Desktop/SWDV%20Stuff/WeeklyProject4/WeeklyProject/thanks.html#" method="post">-->
 <!--<form action="file://swdvdc1/HOME/klow/Week2/WeeklyProject2/WeeklyProject/thanks.html" method="post">-->
+
+
+  <form  method="post" action="thanks.php">
 	<fieldset>
 	<legend>Contact Us!</legend>
 <br />
-		<div>
-			<label for="name">Name<span style="color: #BC002D">*</span></label>
-			<input name="custName" id="name" type="text " required/>
-		</div>
+        <div>
+            <label for="name">Name<span style="color: #BC002D">*</span></label>
+            <input name="name" id="name" type="text" required/>
+        </div>
 		
 <br />
-		<div>
-			<label for="mail">Email<span style="color: #BC002D">*</span></label>
-			<input name="custMail" id="mail" type="email" required/>
-		</div>
+        <div>
+            <label for="email">Email<span style="color: #BC002D">*</span></label>
+            <input name="email" id="mail" type="email" required/>
+        </div>
 		
 <br />
-		<div>
-			<label for="rangeBox"><span style="color: #BC002D"><strong>How would you rate our content?</strong></span><br />
-			(0=poor; 10=great)<br /></label>
-			0
-			<input name="qualityRate" id="rangeBox" type="range" value="5" step="1" min="0" max="10" />
-			10
-		</div>
+        <div>
+            <label for="rate"><span style="color: #BC002D"><strong>How would you rate our content?</strong></span><br />
+            (0=poor; 10=great)<br /></label>
+            0
+            <input name="rate" id="rangeBox" type="range" value="5" step="1" min="0" max="10" />
+            10
+        </div>
 <br />		
-		<div>
-			<label for="commBox"><span style="color: #BC002D"><strong>Give us your feedback!</strong></span></label>
-			<textarea name="feedBack" id="commBox"></textarea>
+        <div>
+            <label for="message"><span style="color: #BC002D"><strong>Give us your feedback!</strong></span></label>
+            <textarea name="message" id="commBox"></textarea>
 
-		</div>
+        </div>
 <br />
-		<div>	
-			<input name="mailBack" id="mailRec" value="yes" type="checkbox" />
-			<label for="mailRec">Would you like to recieve updates on new content ? </label>
-		</div>
+        <div>	
+            <input name="mailBack" id="mailRec" value="yes" type="checkbox" />
+            <label>Would you like to receive updates on new content ? </label>
+        </div>
 	
-	</fieldset>
+    </fieldset>
 		<div id="buttons">
-			<input id="submitButton" type="submit" value="Submit" />
-			<input type="reset" value="Reset" />
-		</div>
+                    <input id="submitButton" name="Submit" type="submit" value="Submit" />
+                    <input type="reset" value="Reset" />
 </form>
 	
 </article>
 <footer>
 
 	<p>Follow us on Facebook and Instagram!</p>
-<a link href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
-<a link href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
+<a href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
+<a href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
 
 </footer>
 </main>
