2/7/2020 Added navigation to admin page.

--- a/DGrayMan.html
+++ b/DGrayMan.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 9/6/2019
 
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: DGrayMan.html
  
-Discription page for D.Gray-Man
- 
+Discription page for D.Gray-Man 
 -->
 
    <title>D.Gray-man</title>
@@ -46,6 +45,7 @@ Discription page for D.Gray-Man
 		<li><a link href="seriesList.html">Novel List</a></li>
 		<li><a link href="mangaList.html">Manga List</a></li>
 		<li><a link href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>
 		
 	</nav>
