--- a/GoblinSlayer.html
+++ b/GoblinSlayer.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 9/6/2019
 
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: GoblinSlayer.html
  
-Discription page for Goblin Slayer
- 
+Description page for Goblin Slayer 
 -->
 
    <title>Goblin Slayer</title>
@@ -42,10 +41,11 @@ Discription page for Goblin Slayer
 	
 	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt="" /></a>
 		<ul>
-		<li><a link href="index.html">Home</a></li>
-		<li><a link href="seriesList.html">Novel List</a></li>
-		<li><a link href="mangaList.html">Manga List</a></li>
-		<li><a link href="contact.html">Contact</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="seriesList.html">Novel List</a></li>
+		<li><a href="mangaList.html">Manga List</a></li>
+		<li><a href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>
 		
 	</nav>
@@ -62,7 +62,7 @@ Discription page for Goblin Slayer
 	an adventurer whose only purpose is the eradication of goblins with extreme prejudice. (source:Wikipedia)</p>
 	
 	<p id="startRead">Start Reading: <span style="color: #BC002D"><i><u>Coming Soon!</u></i></span>
-	<p>An anime television series adaptation by White Fox premiered from <i>October 7 to December 30, 2018</i>.</P
+        <p>An anime television series adaptation by White Fox premiered from <i>October 7 to December 30, 2018</i>.</p>
 	<br/>
 	<iframe id="trailer" width="560" height="315" src="https://www.youtube.com/embed/7qnhoB_cHSg" 
 	frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -72,8 +72,8 @@ Discription page for Goblin Slayer
 <footer>
 
 	<p>Follow us on Facebook and Instagram!</p>
-<a link href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
-<a link href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
+<a href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
+<a href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
 
 </footer>
 </main>
