--- a/AscendanceBookworm.html
+++ b/AscendanceBookworm.html
@@ -2,20 +2,18 @@
 <html>
 <head>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 9/6/2019
 
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: AscendanceBookworm.html
- 
-Discription page for Ascendance of a Bookworm
- 
+ Description page for Ascendance of a Bookworm
 -->
 
    <title>Acendance of a Bookworm</title>
@@ -43,10 +41,11 @@ Discription page for Ascendance of a Bookworm
 	
 	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt="" /></a>
 		<ul>
-		<li><a link href="index.html">Home</a></li>
-		<li><a link href="seriesList.html">Novel List</a></li>
-		<li><a link href="mangaList.html">Manga List</a></li>
-		<li><a link href="contact.html">Contact</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="seriesList.html">Novel List</a></li>
+		<li><a href="mangaList.html">Manga List</a></li>
+		<li><a href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>
 		
 	</nav>
