--- a/SkipBeat.html
+++ b/SkipBeat.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 9/6/2019
 
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: SkipBeat.html
  
-Discription page for Skip Beat!
- 
+Description page for Skip Beat!
 -->
 
    <title>Skip Beat!</title>
@@ -46,6 +45,7 @@ Discription page for Skip Beat!
 		<li><a href="seriesList.html">Novel List</a></li>
 		<li><a href="mangaList.html">Manga List</a></li>
 		<li><a href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>
 		
 	</nav>
