--- a/contact.html
+++ b/contact.html
@@ -2,20 +2,19 @@
 <html>
 <head>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 9/6/2019
  
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: contact.html
  
- Contact Page of Rising Sun Translations
- 
+ Contact Page of Rising Sun Translations 
 -->
    <title>Rising Sun Translations Contact Us</title>
    
@@ -43,6 +42,7 @@
 		<li><a href="seriesList.html">Novel List</a></li>
 		<li><a href="mangaList.html">Manga List</a></li>
 		<li><a href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>		
 	</nav>
 </header> 	
@@ -50,10 +50,6 @@
 <h1>Rising Sun Translations</h1>
 	<p>Want to help us create great content? You can! Your feedback not only helps us maintain the same quality, but we are
 	also open to recommendations!</p>
-
-<!--<form action="file:///C:/Users/Kaitlyn/Desktop/WeeklyProject/thanks.html" method="post">-->
-<!--<form action="file:///C:/Users/Kaitelyn%20Low/Desktop/SWDV%20Stuff/WeeklyProject4/WeeklyProject/thanks.html#" method="post">-->
-<!--<form action="file://swdvdc1/HOME/klow/Week2/WeeklyProject2/WeeklyProject/thanks.html" method="post">-->
 
   <form  method="post" action="thanks.php">
 	<fieldset>
