--- a/mangaList.html
+++ b/mangaList.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <!--
-
  19FA-SWDV-131-001-Web Styling
  
  Author: Kait Low
  Date: 8/30/2019
 
- LAST MODIFIED: 9/13/2019
+ 20SP-SWDV-210-001: Intro Server Side Programming 
+ LAST MODIFIED: 2/7/2020
  
- Version: 4
+ Version: 5
  
  Filename: mangaList.html
  
- Manga List page of Rising Sun Translations
- 
+ Manga List page of Rising Sun Translations 
 -->
 <head>
  <title>Rising Sun Translations Manga List</title>
@@ -42,10 +41,11 @@
 	
 	<nav class="horizontal"> <a id="navicon" href="#"><img src="images/navicon.png" alt="" /></a>
 		<ul>
-		<li><a link href="index.html">Home</a></li>
-		<li><a link href="seriesList.html">Novel List</a></li>
-		<li><a link href="mangaList.html">Manga List</a></li>
-		<li><a link href="contact.html">Contact</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="seriesList.html">Novel List</a></li>
+		<li><a href="mangaList.html">Manga List</a></li>
+		<li><a href="contact.html">Contact</a></li>
+                <li><a href="login.php">Admin</a></li>
 		</ul>
 		
 	</nav>
@@ -84,8 +84,8 @@
 <footer>
 
 	<p>Follow us on Facebook and Instagram!</p>
-<a link href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
-<a link href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
+<a href="https://www.facebook.com/" target="_blank" ><img id="mediaLink" src="images/facebook.png" alt="Facebook" /></a> 
+<a href="https://www.instagram.com/" target="_blank" ><img  src="images/instagram.png" alt="Instagram" /></a>
 
 </footer>
 </main>
